2008-09-25  Michael Hutchinson <mhutchinson@novell.com> 

	* Parser/NRefactoryParser.cs: Track API.

2008-09-25  Mike Krüger <mkrueger@novell.com> 

	* Gui/CSharpAmbience.cs: fixed 'Bug 424499 - Member list should display
	  normal members and explicitly implemented members differently'.

2008-09-24  Michael Hutchinson <mhutchinson@novell.com> 

	* Parser/NRefactoryParser.cs: Fix line/column of errors.

2008-09-24  Mike Krüger <mkrueger@novell.com> 

	* Gui/ResolveVisitor.cs: fixed anonymous type bug.

2008-09-24  Mike Krüger <mkrueger@novell.com> 

	* Gui/MemberCompletionData.cs, Gui/CSharpTextEditorCompletion.cs: Show
	  extension parameter for static resolve.

2008-09-24  Mike Krüger <mkrueger@novell.com> 

	* Gui/MemberCompletionData.cs, Gui/NewOverrideCompletionData.cs,
	  Gui/ResolveVisitor.cs, Gui/NRefactoryParameterDataProvider.cs,
	  Gui/CSharpAmbience.cs: Added support for C#3.0 extension methods.

2008-09-24  Mike Krüger <mkrueger@novell.com> 

	* Gui/NRefactoryParameterDataProvider.cs,
	  Gui/CSharpTextEditorCompletion.cs: fixed 'Bug 427702 - Code
	  Completion: 'is' and 'as' completion not working properly'.

2008-09-24  Mike Krüger <mkrueger@novell.com> 

	* Parser/NRefactoryParser.cs: Worked on tag comments.

2008-09-23  Mike Krüger <mkrueger@novell.com> 

	* Gui/CSharpTextEditorCompletion.cs: Worked on ctrl+space code
	  completion.

2008-09-23  Mike Krüger <mkrueger@novell.com> 

	* Gui/CSharpTextEditorCompletion.cs: fixed 'Bug 429034 - Class alias
	  completion not working properly'.

2008-09-23  Mike Krüger <mkrueger@novell.com> 

	* Gui/NRefactoryParameterDataProvider.cs,
	  Gui/CSharpTextEditorCompletion.cs: Added missing constructor
	  accessible check.

2008-09-23  Mike Krüger <mkrueger@novell.com> 

	* Gui/NRefactoryParameterDataProvider.cs,
	  Gui/CSharpTextEditorCompletion.cs, Parser/NRefactoryParser.cs:
	  fixed 'Bug 427448 - Code Completion: completion of constructor
	  parameters not working'.
