@@ -333,6 +333,12 @@ namespace MonoDevelop.CSharpBinding
 					result.Append (GetString (parameter.ReturnType, flags));
 					result.Append (" ");
 				}
+				if (parameter.IsOut)
+					result.Append ("out ");
+				if (parameter.IsRef)
+					result.Append ("ref ");
+				if (parameter.IsParams)
+					result.Append ("params ");
 				if (HighlightName (flags) && EmitMarkup (flags)) 
 					result.Append ("<b>");
 				result.Append (Format (parameter.Name));
