@@ -1,3 +1,7 @@
+2008-09-26  Mike Krüger <mkrueger@novell.com> 
+
+	* Gui/CSharpAmbience.cs: Worked on csharp ambience.
+
 2008-09-25  Michael Hutchinson <mhutchinson@novell.com> 
 
 	* Parser/NRefactoryParser.cs: Track API.
